Implementation of 3d representation of digital twin model
