# images/admin_api/src/components/digitalTwin/digitalTwin.dto.ts
@@ -11,10 +11,25 @@ class CreateDigitalTwinDto {
 	public type: string;
 
 	@IsNumber()
-	public dashboardId?: number;
+	public dashboardId: number;
 
 	@IsString()
-	public gltfData?: string;
+	public gltfData: string;
+
+	@IsString()
+	public gltfFileName: string;
+
+	@IsString()
+	public gltfFileLastModifDateString: string;
+
+	@IsString()
+	public femSimulationData: string;
+
+	@IsString()
+	public femSimDataFileName: string;
+
+	@IsString()
+	public femSimDataFileLastModifDateString: string;
 }
 
 export default CreateDigitalTwinDto;
