# images/admin_api/src/components/group/group.controller.ts
@@ -321,14 +321,24 @@ class GroupController implements IController {
 					description: `Demo digital twin for default generic device of the group ${groupCreated.acronym}`,
 					type: "Grafana dashboard",
 					dashboardId: dashboardsId[0],
-					gltfData: "{}"
+					gltfData: "{}",
+					gltfFileName: "-",
+					gltfFileLastModifDateString: "-",
+					femSimulationData: "{}",
+					femSimDataFileName: "-",
+					femSimDataFileLastModifDateString: "-",
 				},
 				{
 					name: demoDigitalTwinName(groupCreated, "Mobile"),
 					description: `Demo digital twin for default mobile device of the group ${groupCreated.acronym}`,
 					type: "Grafana dashboard",
 					dashboardId: dashboardsId[1],
-					gltfData: "{}"
+					gltfData: "{}",
+					gltfFileName: "-",
+					gltfFileLastModifDateString: "-",
+					femSimulationData: "{}",
+					femSimDataFileName: "-",
+					femSimDataFileLastModifDateString: "-",
 				},
 			];
 
